- Added bin_sh/tools/generate_schema that generates schema files for given data files. - Replaced Runtime with ProcessBuilder for executing Unix commands.